Individual Homework/10-Week 10/Late Nov 2025 (ASG)/5-route.tf
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.SofiaS.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.SofiaS-nat.id

  }


  tags = {
    Name = "private"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.SofiaS.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id

  }

  tags = {
    Name = "public"
  }
}

resource "aws_route_table_association" "private-eu-west-1a" {
  subnet_id      = aws_subnet.private-eu-west-1a.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private-eu-west-1b" {
  subnet_id      = aws_subnet.private-eu-west-1b.id
  route_table_id = aws_route_table.private.id
}
resource "aws_route_table_association" "private-eu-west-1c" {
  subnet_id      = aws_subnet.private-eu-west-1c.id
  route_table_id = aws_route_table.private.id
}


#public

resource "aws_route_table_association" "public-eu-west-1a" {
  subnet_id      = aws_subnet.public-eu-west-1a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public-eu-west-1b" {
  subnet_id      = aws_subnet.public-eu-west-1b.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public-eu-west-1c" {
  subnet_id      = aws_subnet.public-eu-west-1c.id
  route_table_id = aws_route_table.public.id
}
